--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -234,11 +234,11 @@ THE SOFTWARE.
         <artifactId>antlr</artifactId>
         <version>2.7.6</version>
       </dependency>
-      <dependency>
+      <!--<dependency>
         <groupId>org.jfree</groupId>
         <artifactId>jfreechart</artifactId>
         <version>1.0.19</version>
-      </dependency>
+      </dependency>-->
       <dependency>
         <groupId>commons-digester</groupId>
         <artifactId>commons-digester</artifactId>
@@ -314,11 +314,11 @@ THE SOFTWARE.
         <artifactId>sezpoz</artifactId>
         <version>1.13</version>
       </dependency>
-      <dependency>
+      <!--<dependency>
         <groupId>org.kohsuke.jinterop</groupId>
         <artifactId>j-interop</artifactId>
         <version>2.0.6-kohsuke-1</version>
-      </dependency>
+      </dependency>-->
       <dependency>
         <groupId>org.jvnet.robust-http-client</groupId>
         <artifactId>robust-http-client</artifactId>
