--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -39,7 +39,7 @@ THE SOFTWARE.
 
 
   <properties>
-    <guavaVersion>11.0.1</guavaVersion>
+    <guavaVersion>27.0.1-jre</guavaVersion>
     <slf4jVersion>1.7.30</slf4jVersion>
     <stapler.version>1.261</stapler.version>
     <groovy.version>2.4.12</groovy.version>
@@ -247,7 +247,7 @@ THE SOFTWARE.
       <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
-        <version>1.9.3</version>
+        <version>1.9.4</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -262,7 +262,7 @@ THE SOFTWARE.
       <dependency>
         <groupId>commons-fileupload</groupId>
         <artifactId>commons-fileupload</artifactId>
-        <version>1.3.1-jenkins-2</version>
+        <version>1.3.3</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.txw2</groupId>
